--- a/Pipfile
+++ b/Pipfile
@@ -3,6 +3,11 @@ url = "https://pypi.org/simple"
 verify_ssl = true
 name = "pypi"
 
+[scripts]
+test = "python -m test.run"
+lint = "flake8"
+mypy = "mypy --ignore-missing"
+
 [packages]
 jupyterlab = "*"
 tensorflow-gpu = "==1.11.0"
